--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <img src="1.png" alt="" srcset="">
-<img src="2.png" alt="">
+<img src="2.png" alt="" srcset="">
 <img src="3.png" alt="" srcset="">
 <img src="4.png" alt="" srcset="">
 <img src="5.png" alt="" srcset="">
 <img src="6.png" alt="" srcset="">
-<img src="7.png" alt="">
+<img src="7.png" alt="" srcset="">
 <img src="8.png" alt="" srcset="">
